Fix content spacing issue

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -129,3 +129,17 @@ html, body, #container, #containter > div, [data-reactroot] {
   transform: scale(1.1);
   cursor: pointer;
 }
+
+/* content */
+
+.contentAndFooter {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+g.recharts-layer.recharts-pie {
+  background-color: silver;
+
+}
